// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Environment history panel Loading - Channel SOH 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  >
    <h4
      class="bp4-heading"
    >
      Loading
    </h4>
    <div>
      Channel SOH
    </div>
    <div
      class="bp4-spinner bp4-intent-primary"
      role="progressbar"
    >
      <div
        class="bp4-spinner-animation"
      >
        <svg
          height="50"
          stroke-width="8.00"
          viewBox="1.00 1.00 98.00 98.00"
          width="50"
        >
          <path
            class="bp4-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          />
          <path
            class="bp4-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Environment history panel Loading Station SOH 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  >
    <h4
      class="bp4-heading"
    >
      Loading:
    </h4>
    <div>
      Station SOH
    </div>
    <div
      class="bp4-spinner bp4-intent-primary"
      role="progressbar"
    >
      <div
        class="bp4-spinner-animation"
      >
        <svg
          height="50"
          stroke-width="8.00"
          viewBox="1.00 1.00 98.00 98.00"
          width="50"
        >
          <path
            class="bp4-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          />
          <path
            class="bp4-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Environment history panel Multiple Stations Selected 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  >
    <h4
      class="bp4-heading"
    >
      Multiple Stations Selected
    </h4>
    <div>
      Select one station to see Environment
    </div>
  </div>
</div>
`;

exports[`Environment history panel No Channel Data - Check this stations configuration 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  >
    <h4
      class="bp4-heading"
    >
      No Channel Data
    </h4>
    <div>
      Check this station's configuration
    </div>
  </div>
</div>
`;

exports[`Environment history panel No Monitor Selected 1`] = `
<div>
  <div
    class="base-display environment-history-display top-level-container scroll-box scroll-box--y full-width-height soh-env-component"
  >
    <div
      class="toolbar"
      style="width: 0px;"
    >
      <div
        class="toolbar__left-group"
      />
      <div
        class="toolbar__center-group"
      >
        <div
          class="toolbar__whitespace"
          style="width: 1px;"
        />
      </div>
      <div
        class="toolbar__right-group"
      >
        <span
          class="bp4-popover-wrapper"
        >
          <span
            aria-haspopup="true"
            class="bp4-popover-target"
          >
            <button
              class="bp4-button toolbar-overflow-menu-button "
              data-cy="overflow-button"
              style="width: 30px; transform: rotate(90deg);"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp4-icon bp4-icon-more"
                icon="more"
              >
                <svg
                  data-icon="more"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
    </div>
    <div
      class="bp4-non-ideal-state"
    >
      <h4
        class="bp4-heading"
      >
        No Monitor Selected
      </h4>
      <div>
        Select an environmental monitor type
      </div>
    </div>
  </div>
</div>
`;

exports[`Environment history panel No Station Group Data 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  >
    <h4
      class="bp4-heading"
    >
      No Station Group Data:
    </h4>
    <div>
      For SOH
    </div>
    <div
      class="bp4-spinner bp4-intent-primary"
      role="progressbar"
    >
      <div
        class="bp4-spinner-animation"
      >
        <svg
          height="50"
          stroke-width="8.00"
          viewBox="1.00 1.00 98.00 98.00"
          width="50"
        >
          <path
            class="bp4-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          />
          <path
            class="bp4-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Environment history panel No Station Selected 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  >
    <h4
      class="bp4-heading"
    >
      Loading:
    </h4>
    <div>
      Station SOH
    </div>
    <div
      class="bp4-spinner bp4-intent-primary"
      role="progressbar"
    >
      <div
        class="bp4-spinner-animation"
      >
        <svg
          height="50"
          stroke-width="8.00"
          viewBox="1.00 1.00 98.00 98.00"
          width="50"
        >
          <path
            class="bp4-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          />
          <path
            class="bp4-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Environment history panel No station Selected 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  >
    <h4
      class="bp4-heading"
    >
      No Station Selected
    </h4>
    <div>
      Select a station in SOH Overview or Station Statistics to view Environment
    </div>
  </div>
</div>
`;

exports[`Environment history panel Unsupported monitor type 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  >
    <h4
      class="bp4-heading"
    >
      Unsupported monitor type
    </h4>
    <div>
      Analog environmental monitor types not supported at this time. Select a boolean monitor type to see historical trends.
    </div>
  </div>
</div>
`;

exports[`Environment history panel hidden 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  />
</div>
`;

exports[`Environment history panel matches the snapshot with data no selected station 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  >
    <h4
      class="bp4-heading"
    >
      No Station Selected
    </h4>
    <div>
      Select a station in SOH Overview or Station Statistics to view Environment
    </div>
  </div>
</div>
`;

exports[`Environment history panel no soh data 1`] = `
<div>
  <div
    class="bp4-non-ideal-state"
  >
    <h4
      class="bp4-heading"
    >
      No SOH Data
    </h4>
    <div>
      Station SOH
    </div>
    <div
      class="bp4-spinner bp4-intent-primary"
      role="progressbar"
    >
      <div
        class="bp4-spinner-animation"
      >
        <svg
          height="50"
          stroke-width="8.00"
          viewBox="1.00 1.00 98.00 98.00"
          width="50"
        >
          <path
            class="bp4-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          />
          <path
            class="bp4-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Environment history panel with data for CLIPPED 1`] = `
<div>
  <div
    class="base-display environment-history-display top-level-container scroll-box scroll-box--y full-width-height soh-env-component"
  >
    <div
      class="toolbar"
      style="width: 0px;"
    >
      <div
        class="toolbar__left-group"
      />
      <div
        class="toolbar__center-group"
      >
        <div
          class="toolbar__whitespace"
          style="width: 1px;"
        />
      </div>
      <div
        class="toolbar__right-group"
      >
        <span
          class="bp4-popover-wrapper"
        >
          <span
            aria-haspopup="true"
            class="bp4-popover-target"
          >
            <button
              class="bp4-button toolbar-overflow-menu-button "
              data-cy="overflow-button"
              style="width: 30px; transform: rotate(90deg);"
              type="button"
            >
              <span
                aria-hidden="true"
                class="bp4-icon bp4-icon-more"
                icon="more"
              >
                <svg
                  data-icon="more"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </div>
    </div>
    <div
      class="soh-drill-down-station-label display-title"
      data-cy="drill-down-display-title"
    >
      Test
      <div
        class="display-title__subtitle"
      >
        Clipped
         (Displaying 100% of available points)
      </div>
    </div>
    <div
      class="bp4-non-ideal-state"
    >
      <h4
        class="bp4-heading"
      >
        No Data
      </h4>
      <div>
        No historical environmental data
      </div>
    </div>
  </div>
</div>
`;
